--- a/basic.css
+++ b/basic.css
@@ -1,15 +1,10 @@
 
-/* html, body {
-    box-sizing: border-box;
-    background-color: #ffeead;
-    height: 100%;
-    padding: 10px;
-    margin: 0px;
-  } */
-
-  html, body {
-    background-color: #ffeead;
-    margin: 10px;
+html, body {
+  box-sizing: border-box;
+  background-color: #ffeead;
+  height: 100%;
+  padding: 10px;
+  margin: 0px;
 }
 
 .container > div {
@@ -21,14 +16,13 @@
    
 }
 
-
-.container > div > img {
+/* .container > div > img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+} */
 
-/* .container > div:nth-child(1n) {
+.container > div:nth-child(1n) {
     background-color: #96ceb4;	
   }
   
@@ -42,7 +36,7 @@
   
   .container > div:nth-child(4n) {
     background-color: #ffcc5c;
-  } */
+  }
   
 
 
