--- a/index.css
+++ b/index.css
@@ -1,13 +1,59 @@
+
 .container {
+    border: 1px solid black;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    grid-template-rows: repeat(2, 100px);
+    gap: 5px;
+
+    justify-content: center;
+    align-content: center;
+}
+
+
+/* .container {
+    height: 100%; 
+    display: grid;
+    grid-gap: 3px;
+    grid-template-columns: [main-start] 1fr  [content-start] 5fr [content-end main-end];
+    grid-template-rows: [main-start] 40px [content-start] auto [content-end] 40px [main-end]; 
+}
+
+
+
+.header {
+    /* grid-column: 1 / 3; */
+    /* grid-column: main-start / main-end; */
+    /* grid-column: main;
+}
+
+.menu {} */
+
+/* .content { */
+    /* grid-column: 2 / 3; */
+    /* grid-column: content-start / content-end; */
+    /* grid-area: content;
+} */
+
+/* .footer {
+    /* grid-column: 1 / 3; */
+    /* grid-column: main-start / main-end; */
+    /* grid-column: main;
+}  */
+
+
+
+/* .container {
     display: grid;
     gap: 5px;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     /* grid-template-rows: 100px 100px; */
-    grid-auto-rows: 75px;
+    /* grid-auto-rows: 75px;
     grid-auto-flow: dense;
-}
+} */
 
-.vertical{
+/* .vertical{
     grid-row:span 2;
 }
 .horizontal{
@@ -16,7 +62,7 @@
 .big{
     grid-column:span 2;
     grid-row:span 2;
-}
+} */
 
 
 
